--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "name": "Dickens",
+  "version": "0.1.1",
+  "description": "A simple dictionary",
   "main": "resources/out/main.js",
   "scripts": {
     "start": "electron ."
